--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -35,6 +35,7 @@
                 </a>
                 <ul class="dropdown-menu">
                   <li><%= link_to "Users", users_path %></li>
+                  <li><%= link_to "Users Photos", users_photos_path %></li>
                   <li><%= link_to "Section", sections_path  %></li>
                   <li><%= link_to "Items", items_path  %></li>
                   <li><%= link_to "Location", locations_path  %></li>
