--- a/app/views/users_photos/index.html.erb
+++ b/app/views/users_photos/index.html.erb
@@ -2,6 +2,7 @@
 
 <table border="3" bordercolor="#c86260" bgcolor="#ffffcc" width="100%" cellspacing="2" cellpadding="3">
   <tr>
+    <th>id photo</th>
     <th>name</th>
     <th>Username</th>
     <th>Email</th>
@@ -11,11 +12,12 @@
     <th>Profile image</th>
     <th></th>
     <th></th>
-    <th></th>
+
   </tr>
 
 <% @users_photos.each do |users_photo| %>
   <tr>
+    <td><%= users_photo.id %></td>
     <%  if users_photo.user.nil? %>
         <td></td>
         <td></td>
@@ -31,7 +33,6 @@
 
     <td><%= link_to 'Show', users_photo %></td>
     <td><%= link_to 'Edit', edit_users_photo_path(users_photo) %></td>
-    <td><%= link_to 'Destroy', users_photo, method: :delete, data: { confirm: 'Are you sure?' } %></td>
   </tr>
 <% end %>
 </table>
