--- a/app/views/rooms/xroom.html.erb
+++ b/app/views/rooms/xroom.html.erb
@@ -44,13 +44,13 @@
 <script>
 
         $(function() {
-            console.log( "center room on the tutorial" );
+            //console.log('center room on the tutorial');
             var document_width = $(document).width();
             var window_width = $(window).width();
             var percent = 0.44;
             var width_percent = document_width - window_width;
             width_percent = width_percent * percent;
-            window.scrollTo(width_percent,0);
+            window.scrollTo(width_percent, 0);
         });
 
 
