--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,8 +1,57 @@
 <% provide(:title, 'About Us') %>
-<h1>About Us</h1>
-<p>
-  The <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
-  is a project to make a book and screencasts to teach web development
-  with <a href="http://rubyonrails.org/">Ruby on Rails</a>. This
-  is the sample application for the tutorial.
-</p>
+<div>
+  <%= cl_image_tag("bongo.png", height: 650, :crop => :fit, :quality => 50,:default_image => "default_image_all.png")%>
+</div>
+<div class="about-us-margin">
+    <h2 class="about-us-header">OUR PRODUCT</h2>
+    <p>
+    MyWebRoom.com is a visual place where you can access your favorite websites, connect with friends, and interact with the products you love all from one beautiful interface. MyWebRoom.com is a visual place where you can access your favorite websites, connect with friends, and interact with the products you love all from one beautiful interface. MyWebRoom.com is a visual place where you can access your favorite websites, connect with friends, and interact with the products you love all from one beautiful interface. MyWebRoom.com is a visual place where you can access your favorite websites, connect with friends, and interact with the products you love all from one beautiful interface.
+    </p>
+
+    <p>
+    MyWebRoom.com is a visual place where you can access your favorite websites, connect with friends, and interact with the products you love all from one beautiful interface. MyWebRoom.com is a visual place where you can access your favorite websites, connect with friends, and interact with the products you love all from one beautiful interface.
+    </p>
+
+    <hr>
+
+    <div class="about-us-margin">
+
+        <p class="text-center">
+      MyWebRoom.com is a visual place where you can access your favorite websites, connect with friends, and<br>interact with the products you love all from one eautiful interface.
+        </p>
+        <br>
+
+        <div>
+            <%= cl_image_tag("product-image.png", height: 1500, :crop => :fit, :quality => 50,:default_image => "default_image_all.png")%>
+        </div>
+
+    
+
+        <p class="text-center">
+        MyWebRoom.com is a visual place where you can access your favorite websites, connect with friends, and interact with the products you love all from one eautiful interface.
+        </p>
+      
+        <div>
+            <%= cl_image_tag("product-image-2.png", height: 1500, :crop => :fit, :quality => 50,:default_image => "default_image_all.png")%>
+        </div>
+        <div class="container about-us-blue">
+            <div class="row">
+                <div class="span6 style=margin:20">
+                    <h4 class="about-us-header">ABOUT US</h4>
+                    <p>
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                    </p>
+                    <p>
+                        It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentiall unchanged. It was popularised int he 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                    </p>
+                    <p>
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                    </p>
+                </div>
+                <div class="span6">
+                    <%= cl_image_tag("about-us-image.png", height: 420, width: 420, :crop => :fit, :quality => 50,:default_image => "default_image_all.png")%>
+                </div>
+            </div> <!-- ROW -->
+        </div> <!-- ABOUT US BLUE -->
+    </div> <!-- 2nd ABOUT US MARGIN -->
+</div> <!-- 1st ABOUT US MARGIN -->
